--- a/MCBONALDSMVC/Views/Shared/_Layout.cshtml
+++ b/MCBONALDSMVC/Views/Shared/_Layout.cshtml
@@ -41,13 +41,13 @@
                     </li>
                     <!-- PASSO 4 - Adicione essa class="bt-common-menu" nas suas li -->
                     <!-- PASSO 5 - Adicione o onclick="toggleMobileMenu()" nas tags a -->
-                    <li class="bt-common-menu"><a onclick="toggleMobileMenu()" href="index.html" class="active">Principal</a></li>
+                    <li class="bt-common-menu"><a onclick="toggleMobileMenu()" asp-controller="Home" asp-action="Index" class="active">Principal</a></li>
                     <li class="bt-common-menu"><a onclick="toggleMobileMenu()" href='@Url.Action("Index", "Home")#hamburgueres'>Hamburgueres</a></li>
                     <li class="bt-common-menu"><a onclick="toggleMobileMenu()" href='@Url.Action("Index", "Home")#shakes'>Shakes</a></li>
                     <li class="bt-common-menu"><a onclick="toggleMobileMenu()" href='@Url.Action("Index", "Home")#Historia'>História</a></li>
                     <li class="bt-common-menu"><a onclick="toggleMobileMenu()" href='@Url.Action("Index", "Home")#local'>Local</a></li>
                     <li class="bt-common-menu"><a onclick="toggleMobileMenu()" asp-controller="Cliente" asp-action="Login">Login</a></li>
-                    <li><a id="bt-peca_ja" href="pedidos.html">Peça já!</a></li>
+                    <li><a id="bt-peca_ja"asp-controller="Pedido" asp-action="Index" class="active">Peça já!</a></li>
                 </ul>
             </div>
         </nav>
