--- a/MCBONALDSMVC/Views/Shared/Erro.cshtml
+++ b/MCBONALDSMVC/Views/Shared/Erro.cshtml
@@ -1,3 +1,8 @@
+@model MCBONALDSMVC.ViewMoldels.RespostasViewModel
 <main>
-    <h2> @ViewData["Action"] deu ruim! </h2>
+    <h2> @ViewData["Action"] deu ruim! 
+        
+    </h2>
+    <p>@Model.Mensagem
+    </p>
 </main>
